@@ -19,7 +19,7 @@
 .\" OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 .\" WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 .\"
-.Dd April 24, 2016
+.Dd April 27, 2016
 .Dt PIPEGLADE 1 PRM
 .Os BSD
 .Sh NAME
@@ -602,11 +602,6 @@ sets the current point to
 adds a rectangle to the current path.
 The top left corner is at
 .Pq Ar x , y .
-.Pp
-.Qq Ar name Ns Cm :refresh
-redraws the
-.Cm GtkDrawingArea
-.Ar name .
 .Pp
 .Qq Ar name Ns Cm :rel_curve_to Ar id dx1 dy1 dx2 dy2 dx3 dy3
 adds a cubic Bezier spline from the current point to
